--- a/src/app/customerwebsite/home-customer/home-customer.component.html
+++ b/src/app/customerwebsite/home-customer/home-customer.component.html
@@ -55,32 +55,40 @@
                         <div class="feature-item wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="100ms">
                             <div class="feature-content">
                                 <h3>Bảo Hiểm Chăm Sóc Y Tế</h3>
-                                <p>Trợ cấp viện phí đặc biệt: Chi trả 200% số tiền bảo hiểm cho mỗi ngày nằm viện, lên tới 300 ngày trong toàn bộ thời hạn bảo hiểm của sản phẩm bổ trợ...</p>
+                                <p>Trợ cấp viện phí đặc biệt: Chi trả 200% số tiền bảo hiểm cho mỗi ngày nằm viện, lên
+                                    tới 300 ngày trong toàn bộ thời hạn bảo hiểm của sản phẩm bổ trợ...</p>
                             </div>
                         </div>
                         <div class="feature-item wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="200ms">
                             <div class="feature-content">
                                 <h3>Bảo hiểm sức khoẻ</h3>
-                                <p>Sức khỏe là tài sản quý giá nhất của con người, vì vậy việc chăm sóc, bảo vệ sức khỏe là nhu cầu và đòi hỏi thiết yếu của mỗi cá nhân</p>
+                                <p>Sức khỏe là tài sản quý giá nhất của con người, vì vậy việc chăm sóc, bảo vệ sức khỏe
+                                    là nhu cầu và đòi hỏi thiết yếu của mỗi cá nhân</p>
                             </div>
                         </div>
                         <div class="feature-item wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="feature-content">
                                 <h3>Bảo hiểm tai nạn toàn diện</h3>
-                                <p>Cuộc sống ngày nay luôn rình tập những hiểm họa, tai nạn rủi ro có thể bất ngờ ập tới bất kỳ ai trong chúng ta, gây nên không chỉ những mất mát về tài chính mà con là những nỗi đau tinh thần không thể nào bù đắp...</p>
+                                <p>Cuộc sống ngày nay luôn rình tập những hiểm họa, tai nạn rủi ro có thể bất ngờ ập tới
+                                    bất kỳ ai trong chúng ta, gây nên không chỉ những mất mát về tài chính mà con là
+                                    những nỗi đau tinh thần không thể nào bù đắp...</p>
                             </div>
                         </div>
                         <div class="feature-item wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="400ms">
                             <div class="feature-content">
                                 <h3>bảo hiểm các bệnh lý nghiêm trọng</h3>
-                                <p>Cuộc sống ngày càng hiện đại với các tiến bộ không ngừng trong khoa học công nghệ đã mang đến cho con người những ứng dụng hữu ích trong đời sống hàng ngày, nhưng cùng lúc đó những ảnh hưởng từ môi trường sống và từ chính
+                                <p>Cuộc sống ngày càng hiện đại với các tiến bộ không ngừng trong khoa học công nghệ đã
+                                    mang đến cho con người những ứng dụng hữu ích trong đời sống hàng ngày, nhưng cùng
+                                    lúc đó những ảnh hưởng từ môi trường sống và từ chính
                                     con người cũng đem đến những rủi ro…</p>
                             </div>
                         </div>
                         <div class="feature-item wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="500ms">
                             <div class="feature-content">
                                 <h3>bảo hiểm phẫu thuật và điều trị ngoại khoa</h3>
-                                <p>Sản phẩm này không chỉ giúp Bạn quẳng gánh lo âu về mặt tài chính, mà còn giúp Bạn có điều kiện để yên tâm lựa chọn phương thức điều trị tốt hơn nếu không may Bạn phải phẫu thuật, điều trị ngoại khoa...</p>
+                                <p>Sản phẩm này không chỉ giúp Bạn quẳng gánh lo âu về mặt tài chính, mà còn giúp Bạn có
+                                    điều kiện để yên tâm lựa chọn phương thức điều trị tốt hơn nếu không may Bạn phải
+                                    phẫu thuật, điều trị ngoại khoa...</p>
                             </div>
                         </div>
                     </div>
@@ -102,7 +110,9 @@
                         </div>
                         <div class="services-content">
                             <h3 style="text-align: center;"><a href="#">Bảo vệ và chăm sóc y tế</a></h3>
-                            <p>"Sức khỏe là tài sản quý giá nhất" - Hãy sống tích cực, sống chủ động, lựa chọn các giải pháp tài chính tối ưu để bảo vệ cuộc sống và sức khỏe của chính mình và những người thân yêu từ ngay hôm nay.</p>
+                            <p>"Sức khỏe là tài sản quý giá nhất" - Hãy sống tích cực, sống chủ động, lựa chọn các giải
+                                pháp tài chính tối ưu để bảo vệ cuộc sống và sức khỏe của chính mình và những người thân
+                                yêu từ ngay hôm nay.</p>
 
                         </div>
                     </div>
@@ -115,7 +125,8 @@
                         </div>
                         <div class="services-content">
                             <h3 style="text-align: center;"><a href="#">Tiết kiệm và đầu tư</a></h3>
-                            <p>Nếu bạn cảm thấy số tiền mua một gói bảo hiểm hàng tháng là quá lớn, vậy thì bạn có tưởng tượng nổi chi phí đi cấp cứu và điều trị bệnh có thể lớn đến bao nhiêu?</p>
+                            <p>Nếu bạn cảm thấy số tiền mua một gói bảo hiểm hàng tháng là quá lớn, vậy thì bạn có tưởng
+                                tượng nổi chi phí đi cấp cứu và điều trị bệnh có thể lớn đến bao nhiêu?</p>
                         </div>
                     </div>
                 </div>
@@ -127,7 +138,8 @@
                         </div>
                         <div class="services-content">
                             <h3 style="text-align: center;"><a href="#">Nghỉ hưu an nhàn</a></h3>
-                            <p>Phải làm gì để sau này không còn phải toan tính cho việc mưu sinh, chẳng bận tâm chi tiêu mỗi tháng để được ngao du đây đó và vui quây quần bên những người thân yêu…?
+                            <p>Phải làm gì để sau này không còn phải toan tính cho việc mưu sinh, chẳng bận tâm chi tiêu
+                                mỗi tháng để được ngao du đây đó và vui quây quần bên những người thân yêu…?
                             </p>
                         </div>
                     </div>
@@ -140,7 +152,8 @@
                         </div>
                         <div class="services-content">
                             <h3 style="text-align: center;"><a href="#">Đảm bảo an toàn tài chính</a></h3>
-                            <p>Sẽ ra sao nếu tai họa xảy đến với những người trụ cột trong gia đình? Ai sẽ là người chăm lo và đảm bảo cuộc sống cho những người thân yêu.
+                            <p>Sẽ ra sao nếu tai họa xảy đến với những người trụ cột trong gia đình? Ai sẽ là người chăm
+                                lo và đảm bảo cuộc sống cho những người thân yêu.
                             </p>
                         </div>
                     </div>
@@ -153,7 +166,8 @@
                         </div>
                         <div class="services-content">
                             <h3 style="text-align: center;"><a href="#">Tương lai cho con trẻ</a></h3>
-                            <p>"Trên tất cả, trẻ em xứng đáng với tình yêu thương vô điều kiện ngay cả khi chúng thành công hay mắc sai lầm, dù cuộc sống đơn giản hay phức tạp" - Brack Obama -
+                            <p>"Trên tất cả, trẻ em xứng đáng với tình yêu thương vô điều kiện ngay cả khi chúng thành
+                                công hay mắc sai lầm, dù cuộc sống đơn giản hay phức tạp" - Brack Obama -
                                 <!-- </br>
                             </br> </br> -->
                             </p>
@@ -168,8 +182,10 @@
                         </div>
                         <div class="services-content">
                             <h3 style="text-align: center;"><a href="#">
-                                Bảo hiểm chăm sóc y tế</a></h3>
-                            <p>Phạm vi bảo vệ rộng, đa dạng các quyền lợi bảo vệ: trợ cấp viện phí cơ bản, trợ cấp viện phí đặc biệt, trợ cấp phẫu thuật, hỗ trợ vận chuyển cấp cứu. Quyền lợi bảo hiểm cao, tối đa lên tới 2 tỷ đồng...
+                                    Bảo hiểm chăm sóc y tế</a></h3>
+                            <p>Phạm vi bảo vệ rộng, đa dạng các quyền lợi bảo vệ: trợ cấp viện phí cơ bản, trợ cấp viện
+                                phí đặc biệt, trợ cấp phẫu thuật, hỗ trợ vận chuyển cấp cứu. Quyền lợi bảo hiểm cao, tối
+                                đa lên tới 2 tỷ đồng...
                                 <!-- </br>
                                 </br>
                                 </br> -->
@@ -184,8 +200,10 @@
                             <img src="assets/images/surgeon.png" width="50px">
                         </div>
                         <div class="services-content">
-                            <h3 style="text-align: center;"><a href="#">Bảo hiểm phẫu thuật và điều trị ngoại khoa</a></h3>
-                            <p>Sản phẩm này giúp bạn có điều kiện để yên tâm lựa chọn phương thức điều trị tốt hơn nếu không may Bạn phải phẫu thuật, điều trị ngoại khoa</p>
+                            <h3 style="text-align: center;"><a href="#">Bảo hiểm phẫu thuật và điều trị ngoại khoa</a>
+                            </h3>
+                            <p>Sản phẩm này giúp bạn có điều kiện để yên tâm lựa chọn phương thức điều trị tốt hơn nếu
+                                không may Bạn phải phẫu thuật, điều trị ngoại khoa</p>
                         </div>
                     </div>
                 </div>
@@ -197,7 +215,9 @@
                         </div>
                         <div class="services-content">
                             <h3 style="text-align: center;"><a href="#">Chăm sóc sức khỏe dành cho phụ nữ</a></h3>
-                            <p>Dành cho phụ nữ với các quyền lợi bảo hiểm cho 8 bệnh ung thư phụ nữ, 36 bệnh lý nghiêm trọng, 7 bệnh biến chứng sản khoa và 597 loại phẫu thuật và điều trị ngoại khoa mở rộng...</p>
+                            <p>Dành cho phụ nữ với các quyền lợi bảo hiểm cho 8 bệnh ung thư phụ nữ, 36 bệnh lý nghiêm
+                                trọng, 7 bệnh biến chứng sản khoa và 597 loại phẫu thuật và điều trị ngoại khoa mở
+                                rộng...</p>
                         </div>
                     </div>
                 </div>
@@ -208,8 +228,11 @@
                             <img src="assets/images/fender-bender.png" width="50px">
                         </div>
                         <div class="services-content">
-                            <h3 style="text-align: center;"><a href="#">Bảo hiểm tử vong và thương tật toàn bộ vĩnh viễn do tai nạn</a></h3>
-                            <p>Quyền lợi bảo hiểm bằng 100% Số tiền bảo hiểm sẽ được trả nếu Người được bảo hiểm không may bị thương tật toàn bộ vĩnh viễn hoặc tử vong do tai nạn xảy ra trong thời gian Sản phẩm bổ trợ có hiệu lực...
+                            <h3 style="text-align: center;"><a href="#">Bảo hiểm tử vong và thương tật toàn bộ vĩnh viễn
+                                    do tai nạn</a></h3>
+                            <p>Quyền lợi bảo hiểm bằng 100% Số tiền bảo hiểm sẽ được trả nếu Người được bảo hiểm không
+                                may bị thương tật toàn bộ vĩnh viễn hoặc tử vong do tai nạn xảy ra trong thời gian Sản
+                                phẩm bổ trợ có hiệu lực...
                                 <!-- </br>
                                 </br> -->
                             </p>
@@ -230,7 +253,8 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="contact-title">
-                                        <h2><q><i style="font-weight: bold;">lợi ích của các bạn là sự ưu tiên hàng đầu của chúng tôi</i></q></h2>
+                                        <h2><q><i style="font-weight: bold;">lợi ích của các bạn là sự ưu tiên hàng đầu
+                                                    của chúng tôi</i></q></h2>
                                         <h1> ISOLUTION.ASIA </h1>
                                     </div>
                                 </div>
