--- a/src/app/customerwebsite/nop-ho-so-giai-quyet-qlbh-truc-truyen/nop-ho-so-giai-quyet-qlbh-truc-truyen.component.css
+++ b/src/app/customerwebsite/nop-ho-so-giai-quyet-qlbh-truc-truyen/nop-ho-so-giai-quyet-qlbh-truc-truyen.component.css
@@ -1,71 +1,24 @@
-.mat-typography{
-    width: 1500px;
-    height: 700px;
+/* .form-row{
+    display: flex;
+    margin-left: -5px;
+    margin-right: -5px;
 }
 
 .form-group {
     margin-bottom: 1rem;
 }
 
-label {
-    margin-top: 1.5rem;
-    display: inline-block;
-    margin-bottom: .5rem;
+.col-md-6 {
+    flex:  0 0 50%;
+    max-width: 50%;
+} */
+
+.form-container {
+    max-width: 95%;
+    margin-left: 2.5rem;
+    margin-top: 2.5rem;
 }
 
-.form-control {
-    display: block;
-    width: 100%;
-    height: calc(2.25rem + 2px);
-    padding: .375rem .75rem;
-    font-size: 1rem;
-    line-height: 1.5;
-    color: #495057;
-    background-color: #fff;
-    background-clip: padding-box;
-    border: 1px solid #ced4da;
-    border-radius: .25rem;
-    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
-}
-
-hr {
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-    border: 0;
-    border-top: 1px solid rgba(0,0,0,.1);
-    box-sizing: content-box;
-    height: 0;
-    overflow: visible;
-}
-
-.mt-3{
-    margin-top: 1rem!important;
-}
-
-.mr-2{
-    margin-right: .5rem!important;
-}
-
-.btn:not(:disabled):not(.disabled) {
-    cursor: pointer;
-}
-
-.btn-primary {
-    color: #fff;
-    background-color: #007bff;
-    border-color: #007bff;
-}
-
-.btn {
-    display: inline-block;
-    font-weight: 400;
-    text-align: center;
-    white-space: nowrap;
-    user-select: none;
-    border: 1px solid transparent;
-    padding: .375rem .75rem;
-    font-size: 1rem;
-    line-height: 1.5;
-    border-radius: .25rem;
-    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+button {
+    margin-left: 2rem;
 }
