--- a/src/app/customerwebsite/nop-ho-so-giai-quyet-qlbh-truc-truyen/nop-ho-so-giai-quyet-qlbh-truc-truyen.component.html
+++ b/src/app/customerwebsite/nop-ho-so-giai-quyet-qlbh-truc-truyen/nop-ho-so-giai-quyet-qlbh-truc-truyen.component.html
@@ -1,50 +1,106 @@
-<mat-dialog-content class="mat-typography">
-    <div class="card-header">
-        <h2><b>Nộp hồ sơ yêu cầu giải quyết quyền lợi bảo hiểm</b></h2>
-    </div>
-    <div class="container">
-        <form>
-            <div class="form-group">
-                <label for="policyNo">Mã số hợp đồng</label>
-                <input type="text" id="policyNo" class="form-control" required>
+<html>
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+</head>
+
+
+
+<body>
+    <mat-dialog-content class="mat-typography" id="mat-typography">
+        <div class="card-header">
+            <h2><b>Nộp hồ sơ yêu cầu giải quyết quyền lợi bảo hiểm</b></h2>
+        </div>
+        <form class="form-container">
+            <div class="form-row">
+                <div class="col-md-4 mb-3">
+                    <label for="inputName">Bên mua bảo hiểm</label>
+                    <input type="text" class="form-control" id="inputName" required>
+                </div>
+                <div class="col-md-4 mb-3">
+                    <label for="inputPhone">Số điện thoại liên hệ</label>
+                    <input type="number" class="form-control" id="inputPhone" required>
+                </div>
+                <div class="col-md-4 mb-3">
+                    <label for="inputEmail">Email</label>
+                    <input type="email" class="form-control" id="inputEmail" required>
+                </div>
+            </div>
+
+            <fieldset class="form-group">
+                <div class="row">
+                    <legend class="col-form-label col-sm-2 pt-0"><b>Giới tính</b></legend>
+
+                    <div class="col-sm-10">
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="gridGender" id="gridMale" value="male"
+                                checked>
+                            <label class="form-check-label" for="gridRadios1">
+                                Nam
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="gridGender" id="gridFemale"
+                                value="female">
+                            <label class="form-check-label" for="gridRadios2">
+                                Nữ
+                            </label>
+                        </div>
+                    </div>
+                </div>
+            </fieldset>
+
+            <div class="form-row">
+                <div class="form-group col-md-2">
+                    <label for="inputContractID">Mã số hợp đồng</label>
+                    <input type="text" class="form-control" id="inputContractID" required>
+                </div>
+
+                <div class="form-group col-md-6">
+                    <label for="inputName2">Người thụ hưởng quyền lợi</label>
+                    <input type="text" class="form-control" id="inputName2">
+                </div>
+                <div class="form-group col-md-4">
+                    <label for="inputTypeContract">Quyền lợi bảo hiểm</label>
+                    <select id="inputTypeContract" class="form-control">
+                        <option selected>Chọn loại quyền lợi bảo hiểm...</option>
+                        <option>...</option>
+                    </select>
+                </div>
             </div>
 
             <div class="form-group">
-                <label for="policyHolder">Bên mua bảo hiểm</label>
-                <input type="name" id="policyHolder" class="form-control" required>
+                <label for="inputAddress">Địa chỉ thường trú</label>
+                <input type="text" class="form-control" id="inputAddress" required>
             </div>
 
             <div class="form-group">
-                <label for="idNo">Số giấy tờ tùy thân</label>
-                <input type="number" id="idNo" class="form-control" required>
+                <label for="inputAddress2">Địa chỉ nhận thư</label>
+                <input type="text" class="form-control" id="inputAddress2">
             </div>
 
             <div class="form-group">
-                <label for="phoneNo">Số điện thoại</label>
-                <input type="number" id="phoneNo" class="form-control" required>
+                <label for="inputFile">Tải tài liệu lên</label>
+                <div class="custom-file">
+                    <input id="input-b3" name="input-b3[]" type="file" class="file" multiple data-show-upload="true"
+                        data-show-caption="true">
+                </div>
             </div>
 
-            <div class="form-group">
-                <label for="beneficiary">Người thụ hưởng</label>
-                <input type="name" id="beneficiary" class="form-control">
+            <div class="mb-4">
+                <label for="validationTextarea">Mô tả yêu cầu cần giải quyết quyền lợi</label>
+                <textarea class="form-control" id="validationTextarea" required></textarea>
             </div>
-
-            <div class="form-group">
-                <label for="policyType">Hạng mục yêu cầu thanh toán</label>
-                <select class="form-control" id="policyType" required>
-                    <option>Quyền lợi trong trường hợp tử vong</option>
-                    <option>Quyền lợi trong trường hợp thương tật toàn bộ vĩnh viễn</option>
-                    <option>Quyền lợi trong trường hợp bệnh hiểm nghèo</option>
-                </select>
-            </div>
-
-            <div class="form-group mt-3">
-                <label class="mr-2">Tài liệu đính kèm:</label>
-                <input type="file" name="file" multiple>
-            </div>
-            <hr>
-
             <button type="submit" class="btn btn-primary">Xác nhận</button>
+            <button type="button" class="btn btn-info" (click)="exportPDF()">Xuất tài liệu PDF</button>
         </form>
-    </div>
-</mat-dialog-content>
+    </mat-dialog-content>
+</body>
+
+
+</html>
